// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthComponent 1`] = `
<div>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.png"
    />
    <h1
      className="App-title"
    >
      Lumi
    </h1>
  </header>
  <FirebaseAuth
    firebaseAuth={undefined}
    uiConfig={Object {}}
  />
</div>
`;

exports[`BootstrapStyleComponent 1`] = `
<link
  crossOrigin="anonymous"
  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
  rel="stylesheet"
/>
`;

exports[`GroupCreateComponent 1`] = `
<div>
  <h2>
    Create New Group
  </h2>
  <form>
    <div
      className="form-group has-feedback"
    >
      <label
        className="control-label"
        htmlFor="formGroupNewGroup"
      >
        Choose a group name for your new group
      </label>
      <input
        className="form-control"
        id="formGroupNewGroup"
        onChange={[Function]}
        placeholder="Enter new group name"
        type="text"
        value=""
      />
      <span
        className="help-block"
      >
        Lumi will generate a Group ID to share with family and friends on the next page
      </span>
    </div>
    <button
      className="btn btn-lg btn-primary btn-block"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Create Group
    </button>
  </form>
</div>
`;

exports[`GroupJoinComponent 1`] = `
<div>
  <h2>
    Join Existing Group
  </h2>
  <form>
    <div
      className="form-group has-feedback"
    >
      <label
        className="control-label"
        htmlFor="formGroupJoinGroup"
      >
        Join an existing Lumi Group
      </label>
      <input
        className="form-control"
        id="formGroupJoinGroup"
        onChange={[Function]}
        placeholder="Enter Lumi Group ID"
        type="text"
        value=""
      />
      <span
        className="help-block"
      >
        This ID must be a valid group ID of an existing Lumi Group
      </span>
    </div>
    <button
      className="btn btn-lg btn-default btn-block"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Join Group
    </button>
  </form>
</div>
`;

exports[`HomeComponent 1`] = `null`;

exports[`NavBottomComponent 1`] = `
<nav
  className="nav-bottom navbar navbar-default navbar-fixed-bottom"
>
  <div
    className="container"
  >
    <div
      className="sc-bdVaJa cNkfwA"
    >
      <ul
        className="nav navbar-nav"
        role={null}
      >
        <li
          className=""
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <div
              className="sc-bdVaJa djJVkl"
            >
              <svg
                fill="currentColor"
                height={24}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "color": undefined,
                    "verticalAlign": "middle",
                  }
                }
                viewBox="0 0 40 40"
                width={24}
              >
                <g>
                  <path
                    d="m19.9 12.5h-7.5v7.5h7.5v-7.5z m2.5 12.5v2.5h-12.5v-2.5h12.5z m0-14.9v12.4h-12.5v-12.4h12.5z m12.4 14.9v2.5h-10v-2.5h10z m0-5v2.5h-10v-2.5h10z m0-5v2.5h-10v-2.5h10z m0-4.9v2.4h-10v-2.4h10z m-29.8 18.6v-18.6h-2.5v18.6q0 0.5 0.4 0.9t0.8 0.3 0.9-0.3 0.4-0.9z m32.3 0v-21.1h-29.8v21.1q0 0.6-0.3 1.2h28.8q0.5 0 0.9-0.3t0.4-0.9z m2.5-23.6v23.6q0 1.5-1.1 2.6t-2.7 1.1h-32.3q-1.5 0-2.6-1.1t-1.1-2.6v-21.1h5v-2.5h34.8z"
                  />
                </g>
              </svg>
              Timeline
            </div>
          </a>
        </li>
        <li
          className=""
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <div
              className="sc-bdVaJa djJVkl"
            >
              <svg
                fill="currentColor"
                height={24}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "color": undefined,
                    "verticalAlign": "middle",
                  }
                }
                viewBox="0 0 40 40"
                width={24}
              >
                <g>
                  <path
                    d="m30 13.4v-3.4h-20v3.4h20z m-6.6 10v-3.4h-13.4v3.4h13.4z m-13.4-8.4v3.4h20v-3.4h-20z m23.4-11.6c1.8 0 3.2 1.4 3.2 3.2v20c0 1.8-1.4 3.4-3.2 3.4h-23.4l-6.6 6.6v-30c0-1.8 1.4-3.2 3.2-3.2h26.8z"
                  />
                </g>
              </svg>
              Chat
            </div>
          </a>
        </li>
        <li
          className=""
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <div
              className="sc-bdVaJa djJVkl"
            >
              <svg
                fill="currentColor"
                height={24}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "color": undefined,
                    "verticalAlign": "middle",
                  }
                }
                viewBox="0 0 40 40"
                width={24}
              >
                <g>
                  <path
                    d="m25.9 30.7v-3.6q0-0.3-0.2-0.5t-0.6-0.2h-2.1v-11.4q0-0.3-0.2-0.5t-0.5-0.2h-7.2q-0.3 0-0.5 0.2t-0.2 0.5v3.6q0 0.3 0.2 0.5t0.5 0.2h2.2v7.1h-2.2q-0.3 0-0.5 0.2t-0.2 0.5v3.6q0 0.3 0.2 0.5t0.5 0.2h10q0.4 0 0.6-0.2t0.2-0.5z m-2.9-20v-3.6q0-0.3-0.2-0.5t-0.5-0.2h-4.3q-0.3 0-0.5 0.2t-0.2 0.5v3.6q0 0.3 0.2 0.5t0.5 0.2h4.3q0.3 0 0.5-0.2t0.2-0.5z m14.3 9.3q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                  />
                </g>
              </svg>
              Summary
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`NavTopComponent 1`] = `
<div
  className="nav-top"
>
  <nav
    className="navbar navbar-default navbar-fixed-top"
  >
    <div
      className="container"
    >
      <div
        className="navbar-header"
      >
        <a
          className="navbar-brand"
          href="/"
        >
          <b>
            Lumi
          </b>
        </a>
        <button
          className="navbar-toggle collapsed"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Toggle navigation
          </span>
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
        </button>
      </div>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
      >
        <ul
          className="nav navbar-nav navbar-right"
          role={null}
        >
          <li
            className=""
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              Sign Out
            </a>
          </li>
        </ul>
        <p
          className="navbar-text navbar-right"
        />
      </div>
    </div>
  </nav>
</div>
`;

exports[`NewUserComponent 1`] = `
<div>
  <h1>
    Welcome to Lumi, !
  </h1>
  Before we begin, you must either create or join a Lumi Group.
  <Connect(GroupCreateComponent) />
  <br />
  Or
  <br />
  <Connect(GroupJoinComponent) />
</div>
`;

exports[`RootComponent 1`] = `null`;

exports[`SummaryBasicInfoComponent 1`] = `
<Table
  bordered={true}
  bsClass="table"
  condensed={false}
  hover={true}
  responsive={false}
  striped={false}
>
  <thead>
    <tr>
      <th
        className="product-table-header"
      >
        Field
      </th>
      <th
        className="product-table-header"
      >
        Value
      </th>
      <th
        className="product-table-header"
      >
        Options
      </th>
    </tr>
  </thead>
  <tbody>
    <Connect(SummaryEditWrapperComponent)
      fieldId="firstName"
      formFieldGenerator={[Function]}
      title="First Name"
    />
    <Connect(SummaryEditWrapperComponent)
      fieldId="lastName"
      formFieldGenerator={[Function]}
      title="Last Name"
    />
    <Connect(SummaryEditWrapperComponent)
      fieldId="birthday"
      formFieldGenerator={[Function]}
      isDateField={true}
      title="Birthday"
    />
    <Connect(SummaryEditWrapperComponent)
      fieldId="gender"
      formFieldGenerator={[Function]}
      title="Gender"
    />
    <Connect(SummaryEditWrapperComponent)
      fieldId="email"
      formFieldGenerator={[Function]}
      title="Email"
    />
    <Connect(SummaryEditWrapperComponent)
      fieldId="address"
      formFieldGenerator={[Function]}
      title="Address"
    />
  </tbody>
</Table>
`;

exports[`SummaryCareInfoComponent 1`] = `
<Table
  bordered={true}
  bsClass="table"
  condensed={false}
  hover={true}
  responsive={false}
  striped={false}
>
  <thead>
    <tr>
      <th
        className="product-table-header"
      >
        Field
      </th>
      <th
        className="product-table-header"
      >
        Value
      </th>
      <th
        className="product-table-header"
      >
        Options
      </th>
    </tr>
  </thead>
  <tbody>
    <Connect(SummaryEditWrapperComponent)
      fieldId="needsAndPreferences"
      formFieldGenerator={[Function]}
      title="Needs and Preferences"
    />
    <Connect(SummaryEditWrapperComponent)
      fieldId="thingsThatDelight"
      formFieldGenerator={[Function]}
      title="Things that Delight"
    />
    <Connect(SummaryEditWrapperComponent)
      fieldId="placesOfInterest"
      formFieldGenerator={[Function]}
      title="Places of Interest"
    />
  </tbody>
</Table>
`;

exports[`SummaryComponent 1`] = `null`;

exports[`SummaryEditWrapperComponent 1`] = `
<tr>
  <td>
    
  </td>
  <td
    className="multiline"
  >
    
  </td>
  <td>
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        className="button-icon glyphicon glyphicon-pencil"
      />
      Edit
    </button>
  </td>
</tr>
`;

exports[`SummaryMedicalInfoComponent 1`] = `
<Table
  bordered={true}
  bsClass="table"
  condensed={false}
  hover={true}
  responsive={false}
  striped={false}
>
  <thead>
    <tr>
      <th
        className="product-table-header"
      >
        Field
      </th>
      <th
        className="product-table-header"
      >
        Value
      </th>
      <th
        className="product-table-header"
      >
        Options
      </th>
    </tr>
  </thead>
  <tbody>
    <Connect(SummaryEditWrapperComponent)
      fieldId="typeOfDementia"
      formFieldGenerator={[Function]}
      title="Type of Dementia"
    />
    <Connect(SummaryEditWrapperComponent)
      fieldId="dateOfDiagnosis"
      formFieldGenerator={[Function]}
      isDateField={true}
      title="Date of Diagnosis"
    />
    <Connect(SummaryEditWrapperComponent)
      fieldId="medications"
      formFieldGenerator={[Function]}
      title="Medications"
    />
    <Connect(SummaryEditWrapperComponent)
      fieldId="providers"
      formFieldGenerator={[Function]}
      title="Providers"
    />
  </tbody>
</Table>
`;

exports[`SummaryNewMemberComponent 1`] = `
<div
  className="sc-bdVaJa djJVkl"
>
  <h2>
    Please share details about the new member :)
  </h2>
  <table
    className="table"
  >
    <tbody>
      <tr>
        <td>
          First Name
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Last Name
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Birthday
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Gender
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Email
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Address
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Type of Dementia
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Date of Diagnosis
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Medications
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Providers
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Needs and Preferences
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Things that Delight
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Places of Interest
        </td>
        <td>
          <div />
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="sc-bdVaJa cXgeQK"
  >
    <div
      className="btn-toolbar"
      role="toolbar"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
      <button
        className="btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`SummaryNewMemberFormFieldComponent 1`] = `
<tr>
  <td>
    
  </td>
  <td>
    <div />
  </td>
</tr>
`;

exports[`SummarySelectCareRecipientComponent 1`] = `
<div
  className="sc-bdVaJa hgkmdP"
>
  <h2>
    Welcome to Summary! Please choose a care recipient:
  </h2>
  <div
    className="form-group"
  >
    <select
      className="form-control"
      id="userList"
      onChange={[Function]}
      placeholder="Select a care recipient"
      type={undefined}
      value=""
    />
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Select
  </button>
</div>
`;

exports[`TimelineComponent 1`] = `
<div>
  <Connect(TimelineFiltersComponent) />
  <Table
    bordered={false}
    bsClass="table"
    condensed={false}
    hover={false}
    responsive={false}
    striped={false}
  >
    <tbody>
      
    </tbody>
  </Table>
</div>
`;
